--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
 fastapi
 uvicorn
-pillow
-ultralytics
-torch==2.0.1
-numpy==1.24.4
-python-multipart
-gdown
-scipy
-
-# إضافات مقترحة:
-starlette == 0.27.0   # (FastAPI يعتمد عليها، وأحيانًا بعض النسخ تسبب مشاكل)
-typing-extensions     # لدعم أنظمة typing لبعض المكتبات
+requests
+tqdm
+ultralytics==8.1.24
